--- a/classes/10/notebooks/assignment-10-logistic-regression-starter-code.ipynb
+++ b/classes/10/notebooks/assignment-10-logistic-regression-starter-code.ipynb
@@ -9,11 +9,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Applications/anaconda/lib/python2.7/site-packages/sklearn/cross_validation.py:41: DeprecationWarning: This module was deprecated in version 0.18 in favor of the model_selection module into which all the refactored classes and functions are moved. Also note that the interface of the new CV iterators are different from that of this module. This module will be removed in 0.20.\n",
+      "  \"This module will be removed in 0.20.\", DeprecationWarning)\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "\n",
@@ -56,13 +65,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "# TODO"
+    "# TODO\n",
+    "# probability = 0.5"
    ]
   },
   {
@@ -85,13 +95,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "# TODO"
+    "# TODO\n",
+    "# odds = 1:1"
    ]
   },
   {
@@ -103,13 +114,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "probabilty:  0.9\n",
+      "odds:  9\n"
+     ]
+    }
+   ],
    "source": [
-    "# TODO"
+    "# TODO\n",
+    "print \"probabilty: \", 18./20\n",
+    "print \"odds: \", 18./2\n"
    ]
   },
   {
@@ -121,13 +143,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "probabilty:  0.8\n",
+      "odds:  4.0\n"
+     ]
+    }
+   ],
    "source": [
-    "# TODO"
+    "# TODO\n",
+    "print \"probabilty: \", 16./20\n",
+    "print \"odds: \", 16./4\n"
    ]
   },
   {
@@ -139,13 +172,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "odds ratio 2.25\n"
+     ]
+    }
+   ],
    "source": [
-    "# TODO"
+    "# TODO\n",
+    "print \"odds ratio\", (18./2)/(16./4)"
    ]
   },
   {
@@ -157,9 +199,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -168,13 +210,133 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>age</th>\n",
+       "      <th>job</th>\n",
+       "      <th>marital</th>\n",
+       "      <th>education</th>\n",
+       "      <th>default</th>\n",
+       "      <th>...</th>\n",
+       "      <th>campaign</th>\n",
+       "      <th>pdays</th>\n",
+       "      <th>previous</th>\n",
+       "      <th>poutcome</th>\n",
+       "      <th>c</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>30</td>\n",
+       "      <td>unemployed</td>\n",
+       "      <td>married</td>\n",
+       "      <td>primary</td>\n",
+       "      <td>no</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>unknown</td>\n",
+       "      <td>no</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>33</td>\n",
+       "      <td>services</td>\n",
+       "      <td>married</td>\n",
+       "      <td>secondary</td>\n",
+       "      <td>no</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>339</td>\n",
+       "      <td>4</td>\n",
+       "      <td>failure</td>\n",
+       "      <td>no</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>35</td>\n",
+       "      <td>management</td>\n",
+       "      <td>single</td>\n",
+       "      <td>tertiary</td>\n",
+       "      <td>no</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>330</td>\n",
+       "      <td>1</td>\n",
+       "      <td>failure</td>\n",
+       "      <td>no</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>30</td>\n",
+       "      <td>management</td>\n",
+       "      <td>married</td>\n",
+       "      <td>tertiary</td>\n",
+       "      <td>no</td>\n",
+       "      <td>...</td>\n",
+       "      <td>4</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>unknown</td>\n",
+       "      <td>no</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>59</td>\n",
+       "      <td>blue-collar</td>\n",
+       "      <td>married</td>\n",
+       "      <td>secondary</td>\n",
+       "      <td>no</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>unknown</td>\n",
+       "      <td>no</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 17 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   age          job  marital  education default ...  campaign pdays previous  \\\n",
+       "0   30   unemployed  married    primary      no ...         1    -1        0   \n",
+       "1   33     services  married  secondary      no ...         1   339        4   \n",
+       "2   35   management   single   tertiary      no ...         1   330        1   \n",
+       "3   30   management  married   tertiary      no ...         4    -1        0   \n",
+       "4   59  blue-collar  married  secondary      no ...         1    -1        0   \n",
+       "\n",
+       "  poutcome   c  \n",
+       "0  unknown  no  \n",
+       "1  failure  no  \n",
+       "2  failure  no  \n",
+       "3  unknown  no  \n",
+       "4  unknown  no  \n",
+       "\n",
+       "[5 rows x 17 columns]"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "df"
+    "df.head()"
    ]
   },
   {
@@ -234,13 +396,165 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index([u'age', u'job', u'marital', u'education', u'default', u'balance',\n",
+      "       u'housing', u'loan', u'contact', u'day', u'month', u'duration',\n",
+      "       u'campaign', u'pdays', u'previous', u'poutcome', u'c'],\n",
+      "      dtype='object')\n",
+      "default:  2\n",
+      "housing:  2\n",
+      "loan:  2\n",
+      "contact:  3\n",
+      "pdays:  292\n",
+      "previous:  24\n",
+      "poutcome:  4\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>age</th>\n",
+       "      <th>marital</th>\n",
+       "      <th>education</th>\n",
+       "      <th>default</th>\n",
+       "      <th>balance</th>\n",
+       "      <th>...</th>\n",
+       "      <th>campaign</th>\n",
+       "      <th>pdays</th>\n",
+       "      <th>previous</th>\n",
+       "      <th>poutcome</th>\n",
+       "      <th>c</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>30</td>\n",
+       "      <td>married</td>\n",
+       "      <td>primary</td>\n",
+       "      <td>no</td>\n",
+       "      <td>1787</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>unknown</td>\n",
+       "      <td>no</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>33</td>\n",
+       "      <td>married</td>\n",
+       "      <td>secondary</td>\n",
+       "      <td>no</td>\n",
+       "      <td>4789</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>339</td>\n",
+       "      <td>4</td>\n",
+       "      <td>failure</td>\n",
+       "      <td>no</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>35</td>\n",
+       "      <td>single</td>\n",
+       "      <td>tertiary</td>\n",
+       "      <td>no</td>\n",
+       "      <td>1350</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>330</td>\n",
+       "      <td>1</td>\n",
+       "      <td>failure</td>\n",
+       "      <td>no</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>30</td>\n",
+       "      <td>married</td>\n",
+       "      <td>tertiary</td>\n",
+       "      <td>no</td>\n",
+       "      <td>1476</td>\n",
+       "      <td>...</td>\n",
+       "      <td>4</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>unknown</td>\n",
+       "      <td>no</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>59</td>\n",
+       "      <td>married</td>\n",
+       "      <td>secondary</td>\n",
+       "      <td>no</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>unknown</td>\n",
+       "      <td>no</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 16 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   age  marital  education default  balance ... campaign pdays previous  \\\n",
+       "0   30  married    primary      no     1787 ...        1    -1        0   \n",
+       "1   33  married  secondary      no     4789 ...        1   339        4   \n",
+       "2   35   single   tertiary      no     1350 ...        1   330        1   \n",
+       "3   30  married   tertiary      no     1476 ...        4    -1        0   \n",
+       "4   59  married  secondary      no        0 ...        1    -1        0   \n",
+       "\n",
+       "   poutcome   c  \n",
+       "0   unknown  no  \n",
+       "1   failure  no  \n",
+       "2   failure  no  \n",
+       "3   unknown  no  \n",
+       "4   unknown  no  \n",
+       "\n",
+       "[5 rows x 16 columns]"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# TODO"
+    "# TODO\n",
+    "print df.columns\n",
+    "#print \"age: \", len(df['age'].unique())\n",
+    "#print \"job: \", len(df['job'].unique())\n",
+    "#print \"marital: \", len(df['marital'].unique())\n",
+    "#print \"education: \", len(df['education'].unique())\n",
+    "print \"default: \", len(df['default'].unique())\n",
+    "print \"housing: \", len(df['housing'].unique())\n",
+    "print \"loan: \", len(df['loan'].unique())\n",
+    "print \"contact: \", len(df['contact'].unique())\n",
+    "print \"pdays: \", len(df['pdays'].unique())\n",
+    "print \"previous: \", len(df['previous'].unique())\n",
+    "print \"poutcome: \", len(df['poutcome'].unique())\n",
+    "\n",
+    "df_clean = df.drop(['job'], axis=1)\n",
+    "df_clean.head()"
    ]
   },
   {
@@ -259,13 +573,114 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 71,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>c_no</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4516</th>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4517</th>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4518</th>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4519</th>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4520</th>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>4521 rows × 1 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      c_no\n",
+       "0        0\n",
+       "1        0\n",
+       "2        0\n",
+       "3        0\n",
+       "4        0\n",
+       "...    ...\n",
+       "4516     0\n",
+       "4517     0\n",
+       "4518     0\n",
+       "4519     0\n",
+       "4520     0\n",
+       "\n",
+       "[4521 rows x 1 columns]"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# TODO"
+    "# TODO\n",
+    "# default\n",
+    "df_clean.default.value_counts()\n",
+    "df_clean['default_no'] = df_clean.default.apply(lambda value: 0 if value=='no' else 1)\n",
+    "\n",
+    "#housing\n",
+    "df_clean.housing.value_counts()\n",
+    "df_clean['housing_yes'] = df_clean.housing.apply(lambda value: 0 if value=='yes' else 1)\n",
+    "#df_clean[['housing_yes']]\n",
+    "\n",
+    "#loan\n",
+    "df_clean.loan.value_counts()\n",
+    "df_clean['loan_no'] = df_clean.loan.apply(lambda value: 0 if value=='no' else 1)\n",
+    "#df_clean[['loan_no']]\n",
+    "\n",
+    "#c\n",
+    "df_clean.c.value_counts()\n",
+    "df_clean['c_no'] = df_clean.c.apply(lambda value: 0 if value=='no' else 1)\n",
+    "df_clean[['c_no']]\n"
    ]
   },
   {
@@ -277,13 +692,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 80,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index([u'age', u'balance', u'day', u'duration', u'campaign', u'pdays',\n",
+       "       u'previous', u'job_admin.', u'job_blue-collar', u'job_entrepreneur',\n",
+       "       u'job_housemaid', u'job_management', u'job_retired',\n",
+       "       u'job_self-employed', u'job_services', u'job_student',\n",
+       "       u'job_technician', u'job_unemployed', u'job_unknown',\n",
+       "       u'marital_divorced', u'marital_married', u'marital_single',\n",
+       "       u'education_primary', u'education_secondary', u'education_tertiary',\n",
+       "       u'education_unknown', u'default_no', u'default_yes', u'housing_no',\n",
+       "       u'housing_yes', u'loan_no', u'loan_yes', u'contact_cellular',\n",
+       "       u'contact_telephone', u'contact_unknown', u'month_apr', u'month_aug',\n",
+       "       u'month_dec', u'month_feb', u'month_jan', u'month_jul', u'month_jun',\n",
+       "       u'month_mar', u'month_may', u'month_nov', u'month_oct', u'month_sep',\n",
+       "       u'poutcome_failure', u'poutcome_other', u'poutcome_success',\n",
+       "       u'poutcome_unknown', u'c_no', u'c_yes'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# TODO"
+    "# TODO\n",
+    "df_dummies = pd.get_dummies(df)\n",
+    "df_dummies.columns"
    ]
   },
   {
